Bug 1161407 - Only check for IsMultiProcessWindow on non-B2G & non-Android platforms. r=kats